# Movies_API

./: README.md  db.sqlite3  pyproject.toml  pytest.ini
main/: api.py  models.py  tasks.py  tests.py  views.py
main/migrations/: 0001_initial.py  0002_alter_movie_name_alter_movie_poster_and_more.py  0003_alter_movie_status.py  0004_alter_movie_status.py
movies/: celery.py  settings.py  urls.py
