[tool.poetry]
name = "movies-api"
version = "0.1.0"
description = "This is an API for Cinema App"
authors = ["Foudhil Gharout"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
celery = "5.3.6"
django = "4.2.5"
django-celery-beat = "2.6.0"
django-celery-results = "2.5.1"
django-ninja = "1.1.0"
django-redis = "5.4.0"
poetry = "1.8.2"
redis = "5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
